<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_scratchmap"
        android:icon="@drawable/ic_scratchmap_24dp"
        android:title="@string/title_scratchmap" />

    <item
        android:id="@+id/navigation_journal"
        android:icon="@drawable/ic_journal_24dp"
        android:title="@string/title_journal" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_follow_24dp"
        android:title="@string/title_search" />

</menu>